--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <div class="header-right-nav">
                 <div class="header-right-nav-wrapper">
                     <a>
-                        <div class="icon-container">
-                            <svg viewBox="0 0 24 24" class="">
+                        <div class="icon-container search-open">
+                            <svg viewBox="0 0 24 24">
                                 <g class="">
                                     <path d="M15.5,14h-0.8l-0.3-0.3c1-1.1,1.6-2.6,1.6-4.2C16,5.9,13.1,3,9.5,3S3,5.9,3,9.5C3,13.1,5.9,16,9.5,16c1.6,0,3.1-0.6,4.2-1.6 l0.3,0.3v0.8l5,5l1.5-1.5L15.5,14z M9.5,14C7,14,5,12,5,9.5C5,7,7,5,9.5,5S14,7,14,9.5C14,12,12,14,9.5,14z"></path>
                                 </g>
@@ -80,7 +80,7 @@
                     </a>
                     <a>
                         <div class="icon-container">
-                            <svg viewBox="0 0 24 24" class="">
+                            <svg viewBox="0 0 24 24">
                                 <g class="">
                                     <path d="M7,18c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S8.1,18,7,18z M1,4h2l3.6,7.6L5.2,14C5.1,14.3,5,14.7,5,15c0,1.1,0.9,2,2,2h12 v-2H7.4c-0.1,0-0.2-0.1-0.2-0.2c0,0,0-0.1,0-0.1L8.1,13h7.4c0.8,0,1.4-0.4,1.7-1l3.6-6.5C21,5.3,21,5.2,21,5c0-0.6-0.4-1-1-1H5.2 L4.8,3.1C4.5,2.5,3.8,2,3,2H1V4z M17,18c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S18.1,18,17,18z"></path>
                                 </g>
@@ -89,13 +89,30 @@
                     </a>
                     <a>
                         <div class="icon-container">
-                            <svg viewBox="0 0 24 24" class="">
+                            <svg viewBox="0 0 24 24">
                                 <g class="">
                                     <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"></path>
                                 </g>
                             </svg>
                         </div>
                     </a>
+                </div>
+            </div>
+        </div>
+        <div class="searchbar">
+            <div class="searchbar-container">
+                <div class="search-icon">
+                    <svg focusable="false" width="22" height="22" viewBox="0 0 24 24" class=" NMm5M">
+                        <path d="M20.49 19l-5.73-5.73C15.53 12.2 16 10.91 16 9.5A6.5 6.5 0 1 0 9.5 16c1.41 0 2.7-.47 3.77-1.24L19 20.49 20.49 19zM5 9.5C5 7.01 7.01 5 9.5 5S14 7.01 14 9.5 11.99 14 9.5 14 5 11.99 5 9.5z"></path>
+                    </svg>
+                </div>
+                <div class="search-input">
+                    <input type="text" placeholder="Search Google Store">
+                </div>
+                <div class="search-close">
+                    <svg focusable="false" width="22" height="22" viewBox="0 0 24 24" class=" NMm5M">
+                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"></path>
+                    </svg>
                 </div>
             </div>
         </div>
